Added README markdown

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       - rundeck
   rundeck:
           # image: rundeck/rundeck:3.0.23
-    build: .
-    image: openanalytics/scheduled-reporting-demo:latest
+    #build: .
+    image: openanalytics/scheduled-reporting-demo
     hostname: rundeck
     restart: unless-stopped
     environment:
